# adaptive-retrieval-system

./: 01_sequential_optimization_report.md  02_batch_optimization_report.md  FINAL_PROJECT_SUMMARY.md  IMPLEMENTATION_PLAN.md  README.md  config.yaml  project_understanding.md.resolved  pyproject.toml  research_paper_ieee.tex  task.md  test_router.py
.hypothesis/constants/: 02bb05055b1a4eb8  089523623a048985  10ec5ff05254c871  138127f84d23ffc7  171628bd4c4a4071  2c903a78de1375e6  2e32c9affb6326b3  33891db1e94cd294  34bbfe5899bf4f82  36e917bc3e083743  3db1b68b0fdf8573  4174224778e223ba  46cb2a3f3b53dcb8  4b5d59aa715b1496  52b50c736904dab5  574db1ee0d03107b  58d87f396ee47f6e  596f284d66a9e80e  5c94ffe9ae4f71cd  5d9c10e142d4afc8  64200714ab0d6012  6702022cf496b67b  7c031a3a8b029d13  7e29e29bb772a520  7f5c46fe810c25cd  8035d834256c45eb  822dd1bb579a5459  8c34ac9111b92acf  91f0174a7748c9c9  99296e7c8d334929  9e5308b6e7a1b04c  a54e817dca17eb2d  aa903d4fdc318a8b  aada3bef413c10e9  ab8e2677a2db6619  b9962af70551a72a  baf4cffeadbe5390  c8fdc15585c9af11  ca0f9be82bb1384a  cb87e3668fb36e82  (+10 more)
.kiro/steering/: adaptive-retrieval-system.md  benchmark-requirements.md  project-conventions.md
adaptive-retrieval-system/: .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  README.md
adaptive-retrieval-system/notebooks/: finetuning.ipynb
adaptive-retrieval-system/outputs/: tesseract_comparison.json
adaptive-retrieval-system/references/: README.md
adaptive-retrieval-system/scripts/: generate_charts.py  run_benchmark.py  run_colpali_baseline.py  test_tesseract.py
adaptive-retrieval-system/src/: cli.py
adaptive-retrieval-system/tests/: __init__.py  conftest.py  test_benchmark.py  test_data.py  test_embedding.py  test_experiment.py  test_storage.py
configs/: benchmark.yaml  colab.yaml  dev.yaml
data/: .gitkeep
data/docvqa_sample/: metadata.json
docs/: ADAPTIVE RETRIEVAL SYSTEM.docx  Adaptive_Retrieval_FinalReview.pptx
notebooks/: .gitkeep  benchmark.ipynb
outputs/benchmark_results/: colpali_baseline_20260204_151601.csv  colpali_baseline_20260204_151601.json  colpali_baseline_20260204_151601.txt  colpali_baseline_20260208_142035.json  colpali_baseline_20260208_142035.txt  real_benchmark_20260204_170106.csv  real_benchmark_20260204_170106.json  real_benchmark_20260204_170106.txt  real_benchmark_20260204_175933.csv  real_benchmark_20260204_175933.json  real_benchmark_20260204_175933.txt  real_benchmark_20260208_114905.csv  real_benchmark_20260208_114905.txt  real_benchmark_20260208_131142.csv  real_benchmark_20260208_131142.txt
outputs/results/: .gitkeep
scripts/: download_real_dataset.py  download_real_pages.py  generate_comparison_charts.py  generate_comparison_report.py  run_accuracy_benchmark.py  run_real_benchmark.py
src/: __init__.py
src/benchmark/: __init__.py  metrics.py  runner.py  throughput.py
src/data/: __init__.py  loader.py  real_mm_rag.py  (+1 more)
tests/: test_finetuning.py  test_hardware.py  test_integration.py  test_models.py  test_retrieval.py  test_router.py
(+76 files in other folders)
